--- a/body-detection-master/.OGbodydetection/sketches/twistingExamples/shoulderExample - Copy.html
+++ b/body-detection-master/.OGbodydetection/sketches/twistingExamples/shoulderExample - Copy.html
@@ -12,6 +12,6 @@
     <body>
         <canvas id="canvas" width="640" height="480"></canvas>
         <video id="video" width="640" height="480" autoplay style="display: none"></video>
-        <script src="T.O.M.js"></script>
+        <script src="shoulderExample.js"></script>
     </body>
 </html>
