added a visual lib. 'Index' should be connected with our stuff

--- a/body-detection-master/.OGbodydetection/lib/AmbientCanvasBackgrounds/ellipseExample.html
+++ b/body-detection-master/.OGbodydetection/lib/AmbientCanvasBackgrounds/ellipseExample.html
@@ -12,6 +12,6 @@
     <body>
         <canvas id="canvas" width="640" height="480"></canvas>
         <video id="video" width="640" height="480" autoplay style="display: none"></video>
-        <script src="shoulderExample - Copy.js"></script>
+        <script src="ellipseExample.js"></script>
     </body>
 </html>
